# TheRPlugin_Device

./: CMakeLists.txt  Common.h  Evaluator.cpp  Evaluator.h  Interface.cpp  Interface.h  MasterDevice.cpp  MasterDevice.h  ScopeProtector.cpp  ScopeProtector.h  ScopeSlaveDevice.cpp  ScopeSlaveDevice.h  SlaveDevice.cpp  SlaveDevice.h  evaluator.cpp  evaluator.h  primary_device.cpp  primary_device.h  scope_protector.cpp  scope_protector.h
cmake/modules/: FindR.cmake
